<resources>
    <string name="app_name" translatable="false">PartTime</string>
    <string name="account_type" translatable="false">ru.semkin.ivan.parttime</string>
    <string name="content_authority" translatable="false">ru.semkin.ivan.parttime.provider</string>


    <!-- Strings related to Intro Slides-->
    <string name="intro_welcome">Welcome!</string>
    <string name="intro_auth">Authorization</string>
    <string name="intro_sign_in">Sign in</string>
    <string name="intro_just_click">Just click the button below</string>
    <string name="intro_success">Succseful login! Loading basic profile data…</string>
    <string name="intro_error">Something unexpected happened, try again later</string>
    <string name="work_chat">Select your work chat</string>
    <string name="work_group">Select your work group</string>


    <!-- Strings related to Drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_profile_picture">User\'s profile picture</string>
    <string name="nav_user_name">John Oliver</string>
    <string name="nav_user_info">Mood</string>
    <string name="nav_home">Home</string>
    <string name="nav_tasks">Tasks</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_group">Group</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log out</string>


    <!-- Strings related to Profile -->
    <string name="title_profile">Profile</string>
    <string name="save_and_exit">Save and exit</string>
    <string name="cancel">Cancel</string>
    <string name="required">Required</string>
    <string name="not_specified">Not specified</string>
    <string name="profile_field_name">Name</string>
    <string name="profile_field_gender">Gender</string>
    <string name="profile_field_birthday">Birthday</string>
    <string name="profile_field_country">Country</string>
    <string name="profile_field_city">City</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>


    <!-- Strings related to Home -->
    <string-array name="chart_days">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string name="image_tasks">Tasks amount</string>
    <string name="tasks_done_today">Tasks done today:</string>
    <string name="tasks_left">Tasks left:</string>


    <!-- Strings related to Group -->
    <string name="description_send">Send message</string>
    <string name="your_message">Your message</string>
    <string name="no_messages">No messages found</string>
    <string name="error_message">Error loading message</string>


    <!-- Strings related to Chat -->
    <string name="unsupported_media">Unsupported media</string>


    <!-- Strings related to Post -->
    <string name="view_post">View post</string>
    <string name="image_comments">Comments</string>
    <string name="image_post">Post\'s attachment</string>


    <!-- Strings related to Post -->
    <string name="marked_done">The task was marked as done</string>
    <string name="undo">Undo</string>

    <!-- No content placeholders -->
    <string name="no_title">No title</string>
    <string name="no_content">No content</string>
    <string name="no_date">No date</string>
    <string name="no_author">No Author</string>
    <string name="loading">Loading…</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
