<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/messages_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:dividerHeight="6dp"
        android:drawSelectorOnTop="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:clipToPadding="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/input" />

    <TextView android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_messages"
        android:gravity="center"/>

    <LinearLayout android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <!-- TODO Implement attachments someday ImageButton
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_chat_attach_file"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/desc_send_media_content" /-->

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColorHint="#CFD8DC"
            android:layout_gravity="center"
            android:textColor="#CFD8DC"
            android:hint="@string/your_message"
            android:id="@+id/edit_message_chat"
            android:inputType="textMultiLine|textCapSentences"
            android:maxHeight="100dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="12dp"
            android:id="@+id/btn_send_message"
            app:srcCompat="@drawable/ic_send"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/description_send" />
    </LinearLayout>
</RelativeLayout>