<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    tools:ignore="Overdraw"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/chart_card"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:cardBackgroundColor="@color/colorPrimary"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <com.db.chart.view.LineChartView
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:chart_axis="false"
                app:chart_axisBorderSpacing="15dp"
                app:chart_labelColor="#ffffff"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/text_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#CCCCCC"
        android:layout_marginTop="16dp"
        android:paddingStart="12dp"
        android:paddingEnd="6dp"
        android:text="@string/tasks_done_today"
        android:layout_below="@id/chart_card"
        />

    <TextView
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:layout_toEndOf="@id/text_done"
        android:layout_alignBottom="@id/text_done"
        android:text="@string/loading"
        />

    <TextView
        android:id="@+id/text_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#CCCCCC"
        android:layout_marginTop="6dp"
        android:paddingStart="12dp"
        android:paddingEnd="6dp"
        android:text="@string/tasks_left"
        android:layout_below="@id/text_done"
        />

    <TextView
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:layout_toEndOf="@id/text_left"
        android:layout_alignBottom="@id/text_left"
        android:text="@string/loading"
        />
</RelativeLayout>
